进一步更新swag
